Updates for pom clean-up and maven surefire rerunning tests.