@@ -67,108 +67,6 @@ Copyright 2010 by TalkingTrends (Amsterdam, The Netherlands)
 
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>2.6</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>test-jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>properties-maven-plugin</artifactId>
- 	<version>1.0-alpha-2</version>
-        <executions>
-           <!-- Associate the read-project-properties goal with the initialize phase, to read the properties file. -->
-          <execution>
-            <phase>initialize</phase>
-            <goals>
-              <goal>read-project-properties</goal>
-            </goals>
-            <configuration>
-              <files>
-                <file>testServices.properties</file>
-              </files>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.18.1</version>
-        <configuration>
-         <basedir>${basedir}</basedir>
-         <argLine>-server -ea -Xms512m -Xmx8g -XX:+UseMembar -XX:MaxPermSize=500m -Djavadoc=true -Djava.net.preferIPv4Stack=${java.net.preferIPv4Stack} -Djava.security.manager -Djava.security.policy=${java.security.policy} -Dtest.zookeeper.clientPort=${test.zookeeper.clientPort} -Dtest.zookeeper.tickTime=${test.zookeeper.tickTime} -Dlog4j.configuration=${log4j.configuration} -Dtest.zookeeper.installDir=${zookeeper.Installation}</argLine>
-	 <forkCount>2</forkCount>
-         <reuseForks>true</reuseForks>
-         <printSummary>false</printSummary>
-         <disableXmlReport>false</disableXmlReport>
-        </configuration>
-      </plugin>
-      <plugin>
-           <artifactId>maven-antrun-plugin</artifactId>
-           <version>1.6</version>
-           <executions>
-             <execution>
-  	       <id>start-zookeeper</id>
-	       <goals>
-                 <goal>run</goal>
-               </goals>
-               <phase>process-test-resources</phase>
-               <configuration>
-                 <target>
-                   <ant antfile="build.xml" target="preTestPreparation"/>
-                 </target>
-               </configuration>
-             </execution>
-             <execution>
-  	       <id>stop-zookeeper</id>
-	       <goals>
-		<goal>run</goal>
-	       </goals>
-               <phase>test</phase>
-               <configuration>
-                 <target>
-                   <ant antfile="build.xml" target="postTestCleanup"/>
-                 </target>
-               </configuration>
-             </execution>
-           </executions>
-         </plugin>
-        <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <version>2.10</version>
-        <executions>
-          <execution>
-            <id>copy</id>
-            <phase>compile</phase>
-            <goals>
-              <goal>copy</goal>
-            </goals>
-            <configuration>
-              <artifactItems>
-                <artifactItem>
-                  <groupId>com.blazegraph</groupId>
-                  <artifactId>bigdata-war-html</artifactId>
-                  <version>${project.version}</version>
-                  <type>war</type>
-                  <overWrite>true</overWrite>
-                  <outputDirectory>target</outputDirectory>
-                  <destFileName>bigdata.war</destFileName>
-                </artifactItem>
-              </artifactItems>
-              <!-- other configurations here -->
-            </configuration>
-          </execution>
-        </executions>
-        </plugin>
     </plugins>
   </build>
 
